@@ -179,6 +179,7 @@ static void align_free_set(void){
 	for(p=1;p<align_set->bucket_pos;p++){
 	  if (align_set->align_data_set[p]) {
 	    free(align_set->align_data_set[p]);
+            align_set->align_data_set[p] = NULL;
 	  }
 	}
 	free(align_set->align_data_set);
